@@ -92,6 +92,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
   frames, and $wgMaxImageArea against the size of the first frame, rather than
   the other way around.  Both now default to 12.5 megapixels.  Also, images
   exceeding $wgMaxImageArea can still be embedded at original size
+* (bug 23078) "All public logs" option on Special:Log is now always the first
+  item
 
 === API changes in 1.17 ===
 * (bug 22738) Allow filtering by action type on query=logevent
